[gd_scene load_steps=2 format=3 uid="uid://co3l70wcwpyrj"]

[ext_resource type="Script" path="res://sources/minigames/frog/lilypad_track/lilypad_track.gd" id="1_lybcb"]

[node name="LiLypadTrack" type="Control"]
custom_minimum_size = Vector2(0, 2800)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_lybcb")

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
